syntax = "proto3";

package credentials;

import "common/errors.proto";
import "common/numbers.proto";
import "kyc/kyc.proto";
import "countries/countries.proto";
import "google/protobuf/timestamp.proto";

// Backed by table 'kyc_credentials'
message Credentials {
  string id = 1; // System Key: id is generated by the server or the database
  optional string photo = 2;
  optional string gender = 3;
  optional string title = 4;
  optional string first_name = 5;
  optional string middle_names = 6;
  optional string last_name = 7;
  optional google.protobuf.Timestamp birthday = 8;
  optional countries.Country country_of_birth = 9;
  optional countries.Country country_of_nationality = 10;
  kyc.Status status = 11;
}

message List {
  repeated Credentials list = 1;
}

message SelectList {
  repeated string list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  optional string photo = 1;
  optional string gender = 2;
  optional string title = 3;
  optional string first_name = 4;
  optional string middle_names = 5;
  optional string last_name = 6;
  optional google.protobuf.Timestamp birthday = 7;
  optional countries.Select country_of_birth = 8;
  optional countries.Select country_of_nationality = 9;
  optional kyc.Status status = 10;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    Credentials credentials = 2;
  }
}

message UpdateRequest {
  string id = 1;
  optional string photo = 2;
  optional string gender = 3;
  optional string title = 4;
  optional string first_name = 5;
  optional string middle_names = 6;
  optional string last_name = 7;
  optional google.protobuf.Timestamp birthday = 8;
  optional countries.Select country_of_birth = 9;
  optional countries.Select country_of_nationality = 10;
  optional kyc.Status status = 11;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    Credentials credentials = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  string id = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    Credentials credentials = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional string photo = 2;
  optional string gender = 3;
  optional string title = 4;
  optional string first_name = 5;
  optional string middle_names = 6;
  optional string last_name = 7;
  optional common.TimestampValueList birthday = 8;
  optional countries.GetListRequest country_of_birth = 9;
  optional countries.GetListRequest country_of_nationality = 10;
  optional kyc.StatusList status = 11;
}

message GetListResponse {
  oneof response {
    common.Error error = 1;
    Credentials credentials = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    Credentials credentials = 2;
  }
}

// This is to be used in Entities that requires Credential Assignment

message UpdateCredentials {
  optional string photo = 1;
  optional string gender = 2;
  optional string title = 3;
  optional string first_name = 4;
  optional string middle_names = 5;
  optional string last_name = 6;
  optional common.TimestampValueList birthday = 7;
  optional countries.GetListRequest country_of_birth = 8;
  optional countries.GetListRequest country_of_nationality = 9;
  optional kyc.StatusList status = 10;
}
